apps/overlays/dev/infrastructure/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: logging
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: dev.prometheus
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
